Rebrand to CyberSecurity Posture Management with multi-framework support
- Changed app name from NIST CSF 2.0 Assessment Manager to CyberSecurity Posture Management
- Added framework selector to assessment creation
- NIST CSF is now one of multiple selectable frameworks
- Added framework_id and framework_type to assessments table
- Created migration for multi-framework support
- Updated translations (EN/ES) with new branding
- Display selected framework in assessment list
- Support for NIST CSF, ISO 27001, CIS Controls, and more

--- a/public/static/i18n/en.json
+++ b/public/static/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "NIST CSF 2.0 Assessment Manager",
+    "title": "CyberSecurity Posture Management",
     "language": "Language"
   },
   "nav": {
@@ -14,6 +14,8 @@
     "empty": "No assessments yet. Create your first one!",
     "name": "Assessment Name",
     "organization": "Organization",
+    "framework": "Framework",
+    "select_framework": "Select Framework",
     "date": "Assessment Date",
     "assessor": "Assessor Name",
     "description": "Description",
