Phase 1: Rebrand to CSP and implement full i18n infrastructure
- Rebrand to 'Cyber Security Posture - CSP'
- Add subtitle: 'NIST CSF 2.0 Assessment Platform'
- Create translation tables for all NIST CSF content
- Update API endpoints to support lang parameter (functions, categories, subcategories)
- Add NIST CSF 2.0 reference docs (English & Spanish PDFs)
- Create Spanish translations SQL file with all 111 subcategories
- Update frontend to send language parameter to API
- Implement dynamic content loading based on user language
- Migration 0004: Content internationalization support

--- a/public/static/i18n/en.json
+++ b/public/static/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "app": {
-    "title": "CyberSecurity Posture Management",
+    "title": "Cyber Security Posture - CSP",
+    "subtitle": "NIST CSF 2.0 Assessment Platform",
     "language": "Language"
   },
   "nav": {
