Implement complete authentication & RBAC system
CRITICAL FEATURES:
- User authentication (login/register/logout)
- Role-based access control (Admin vs User)
- Admin can DELETE assessments/organizations
- Users can only CREATE/RESPOND to assessments
- Comprehensive bilingual auth UI (EN/ES)

NEW FILES:
- migrations/0005_user_authentication.sql (users, sessions tables)
- src/auth.ts (RBAC middleware)
- src/auth-routes.ts (authentication endpoints)
- public/static/auth-ui.js (login/register UI)
- AUTHENTICATION_IMPLEMENTATION.md (complete docs)
- APPLY_TRANSLATIONS.md (i18n guide)

MODIFIED:
- src/index.tsx (integrate auth, protect routes)
- src/types.ts (User, Session, AuthResponse types)
- public/static/i18n/en.json (auth translations)
- public/static/i18n/es.json (auth translations)

DEMO USERS:
- Admin: admin@csp.com / Admin123!
- User: user@csp.com / User123!

STATUS: Ready to deploy (pending Cloudflare API key update)

--- a/public/static/i18n/en.json
+++ b/public/static/i18n/en.json
@@ -7,7 +7,26 @@
   "nav": {
     "assessments": "Assessments",
     "frameworks": "Frameworks",
-    "organizations": "Organizations"
+    "organizations": "Organizations",
+    "login": "Login",
+    "logout": "Logout",
+    "register": "Register"
+  },
+  "auth": {
+    "login_title": "Login to CSP",
+    "register_title": "Register New Account",
+    "email": "Email Address",
+    "password": "Password",
+    "name": "Full Name",
+    "login_button": "Login",
+    "register_button": "Create Account",
+    "no_account": "Don't have an account?",
+    "have_account": "Already have an account?",
+    "register_link": "Register here",
+    "login_link": "Login here",
+    "logout_confirm": "Are you sure you want to logout?",
+    "role_admin": "Administrator",
+    "role_user": "User"
   },
   "assessments": {
     "title": "Cybersecurity Assessments",
