Add delete buttons for Admin users
CRITICAL FIX:
- Add delete buttons for assessments (Admin only)
- Add delete buttons for organizations (Admin only)
- Buttons only visible when user.role === 'admin'
- Double confirmation (alert + prompt 'DELETE')
- Translations for delete messages (EN/ES)

TESTING:
- Admin (admin@csp.com): CAN see and use delete buttons
- User (user@csp.com): CANNOT see delete buttons
- Backend already protected with requireAdmin middleware

Deployed: https://4c414d2d.nist-csf-assessment.pages.dev

--- a/public/static/i18n/es.json
+++ b/public/static/i18n/es.json
@@ -45,6 +45,9 @@
     "view": "Ver Detalles",
     "edit": "Editar",
     "delete": "Eliminar",
+    "delete_confirm": "¿Estás seguro de que quieres eliminar esta evaluación? Esta acción no se puede deshacer.",
+    "delete_final": "Esto eliminará permanentemente la evaluación y todas sus respuestas. Escribe DELETE para confirmar:",
+    "deleted": "Evaluación eliminada exitosamente",
     "statistics": "Estadísticas",
     "completion": "Completitud",
     "average_maturity": "Madurez Promedio"
@@ -67,7 +70,15 @@
     "cancel": "Cancelar",
     "view": "Ver Detalles",
     "edit": "Editar",
-    "delete": "Eliminar"
+    "delete": "Eliminar",
+    "delete_confirm": "¿Estás seguro de que quieres eliminar esta organización? Esto también eliminará todas las evaluaciones asociadas.",
+    "delete_final": "Esta acción no se puede deshacer. Escribe DELETE para confirmar:",
+    "deleted": "Organización eliminada exitosamente"
+  },
+  "common": {
+    "cancelled": "Operación cancelada",
+    "error": "Ocurrió un error",
+    "success": "Operación exitosa"
   },
   "evaluation": {
     "maturity_level": "Nivel de Madurez",
