--- a/public/static/i18n/en.json
+++ b/public/static/i18n/en.json
@@ -45,6 +45,9 @@
     "view": "View Details",
     "edit": "Edit",
     "delete": "Delete",
+    "delete_confirm": "Are you sure you want to delete this assessment? This action cannot be undone.",
+    "delete_final": "This will permanently delete the assessment and all its responses. Type DELETE to confirm:",
+    "deleted": "Assessment deleted successfully",
     "statistics": "Statistics",
     "completion": "Completion",
     "average_maturity": "Average Maturity"
@@ -67,7 +70,15 @@
     "cancel": "Cancel",
     "view": "View Details",
     "edit": "Edit",
-    "delete": "Delete"
+    "delete": "Delete",
+    "delete_confirm": "Are you sure you want to delete this organization? This will also delete all associated assessments.",
+    "delete_final": "This action cannot be undone. Type DELETE to confirm:",
+    "deleted": "Organization deleted successfully"
+  },
+  "common": {
+    "cancelled": "Operation cancelled",
+    "error": "An error occurred",
+    "success": "Operation successful"
   },
   "evaluation": {
     "maturity_level": "Maturity Level",
