CRITICAL FIX: Add User Management + Fix Delete Buttons
PROBLEMA RESUELTO:
- Botones de eliminar ahora funcionan correctamente
- Fixed: window.authState now properly initialized before loadAssessments()
- Fixed: window.init() now called after authentication is ready

NUEVA FUNCIONALIDAD: Gestión de Usuarios (Admin Only)
- New 'Users' menu tab (admin only)
- List all users with role badges
- Create new users (admin/user roles)
- Edit existing users (name, email, password, role, active status)
- Delete users (with protection: cannot delete yourself)
- Full API endpoints: GET/POST/PUT/DELETE /api/users
- Backend protection with requireAdmin middleware
- Translations EN/ES complete

DELETE BUTTONS NOW WORKING:
- Assessments: Delete button visible for admin
- Organizations: Delete button visible for admin
- Users: Delete button for all users (except yourself)
- All with double confirmation (alert + prompt DELETE)

Deployed: https://57e907a5.nist-csf-assessment.pages.dev

--- a/public/static/i18n/es.json
+++ b/public/static/i18n/es.json
@@ -8,6 +8,7 @@
     "assessments": "Evaluaciones",
     "frameworks": "Marcos",
     "organizations": "Organizaciones",
+    "users": "Usuarios",
     "login": "Iniciar Sesión",
     "logout": "Cerrar Sesión",
     "register": "Registrarse"
@@ -79,6 +80,28 @@
     "cancelled": "Operación cancelada",
     "error": "Ocurrió un error",
     "success": "Operación exitosa"
+  },
+  "users": {
+    "title": "Gestión de Usuarios",
+    "new": "Nuevo Usuario",
+    "empty": "Aún no hay usuarios",
+    "name": "Nombre Completo",
+    "email": "Correo Electrónico",
+    "password": "Contraseña",
+    "role": "Rol",
+    "role_admin": "Administrador",
+    "role_user": "Usuario Regular",
+    "is_active": "Activo",
+    "created_at": "Creado",
+    "create": "Crear Usuario",
+    "cancel": "Cancelar",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "delete_confirm": "¿Estás seguro de que quieres eliminar este usuario?",
+    "delete_final": "Escribe DELETE para confirmar:",
+    "deleted": "Usuario eliminado exitosamente",
+    "created": "Usuario creado exitosamente",
+    "updated": "Usuario actualizado exitosamente"
   },
   "evaluation": {
     "maturity_level": "Nivel de Madurez",
