--- a/public/static/i18n/en.json
+++ b/public/static/i18n/en.json
@@ -8,6 +8,7 @@
     "assessments": "Assessments",
     "frameworks": "Frameworks",
     "organizations": "Organizations",
+    "users": "Users",
     "login": "Login",
     "logout": "Logout",
     "register": "Register"
@@ -79,6 +80,28 @@
     "cancelled": "Operation cancelled",
     "error": "An error occurred",
     "success": "Operation successful"
+  },
+  "users": {
+    "title": "User Management",
+    "new": "New User",
+    "empty": "No users yet",
+    "name": "Full Name",
+    "email": "Email",
+    "password": "Password",
+    "role": "Role",
+    "role_admin": "Administrator",
+    "role_user": "Regular User",
+    "is_active": "Active",
+    "created_at": "Created",
+    "create": "Create User",
+    "cancel": "Cancel",
+    "edit": "Edit",
+    "delete": "Delete",
+    "delete_confirm": "Are you sure you want to delete this user?",
+    "delete_final": "Type DELETE to confirm:",
+    "deleted": "User deleted successfully",
+    "created": "User created successfully",
+    "updated": "User updated successfully"
   },
   "evaluation": {
     "maturity_level": "Maturity Level",
