COMPLIANCE FIX: Align maturity levels with NIST CSF 2.0 official specification
NIST CSF 2.0 defines 4 Tiers (1-4), not 5 levels. This commit corrects the implementation.

Changes:
1. Database Migration (0006_fix_maturity_levels.sql):
   - Changed maturity_level constraint from 0-5 to 0-4
   - Migrated existing level 5 data to level 4
   - Recreated assessment_responses table with correct constraint
   - Updated assessment_items table (for non-NIST frameworks)

2. UI Updates:
   - Changed maturity selector from 0-5 to 0-4 levels
   - Updated getMaturityLabel() to use official NIST tier names
   - Removed level 5 option from dropdown

3. Official NIST CSF 2.0 Tier Labels:
   English:
   - Tier 0: Not Assessed
   - Tier 1: Partial (ad hoc, limited awareness)
   - Tier 2: Risk Informed (approved but not consistent)
   - Tier 3: Repeatable (formal policies, consistent)
   - Tier 4: Adaptive (continuous improvement, predictive)

   Spanish:
   - Nivel 0: No Evaluado
   - Nivel 1: Parcial
   - Nivel 2: Informado por Riesgo
   - Nivel 3: Repetible
   - Nivel 4: Adaptativo

4. Translation Files:
   - Added maturity.tier_0 through maturity.tier_4 in en.json
   - Added maturity.tier_0 through maturity.tier_4 in es.json
   - Includes both full and short versions

Database Impact:
- 13 queries executed successfully
- 1153 rows read, 85 rows written
- All existing data preserved with level 5 → level 4 migration

Deployed to: https://5229ac56.nist-csf-assessment.pages.dev

--- a/public/static/i18n/en.json
+++ b/public/static/i18n/en.json
@@ -116,6 +116,18 @@
     "partially_implemented": "Partially Implemented",
     "fully_implemented": "Fully Implemented"
   },
+  "maturity": {
+    "tier_0": "Not Assessed",
+    "tier_1": "Tier 1 - Partial",
+    "tier_2": "Tier 2 - Risk Informed",
+    "tier_3": "Tier 3 - Repeatable",
+    "tier_4": "Tier 4 - Adaptive",
+    "tier_0_short": "Not Assessed",
+    "tier_1_short": "Partial",
+    "tier_2_short": "Risk Informed",
+    "tier_3_short": "Repeatable",
+    "tier_4_short": "Adaptive"
+  },
   "status": {
     "draft": "Draft",
     "in_progress": "In Progress",
