UX IMPROVEMENT: Enhanced assessment workflow with status management
Major improvements to assessment navigation and status lifecycle:

1. Clean Navigation:
   - Hide assessments list when viewing assessment detail
   - Show only 'Back to List' button for clean, focused view
   - Assessment title prominently displayed
   - Improved readability and reduced visual clutter

2. Automatic Status Management:
   - Draft → In Progress: Auto-transition when first response is added
   - Manual completion: 'Submit Assessment' button to mark as completed
   - Status badge updates in real-time

3. Assessment Lifecycle:
   Status Flow:
   - Draft: Initial state (can edit)
   - In Progress: Auto-set on first response (can edit)
   - Completed: User submits (read-only, locked)
   - Admin can reopen completed assessments

4. Read-Only Mode for Completed Assessments:
   - All selectors disabled with visual feedback (gray background)
   - Edit button changes to 'View details' (disabled)
   - Yellow warning banner: 'This assessment is completed and cannot be edited'
   - Prevents accidental modifications

5. Admin Controls:
   - 'Reopen Assessment' button for completed assessments (admin only)
   - Changes status from Completed → In Progress
   - Allows re-editing when necessary

6. UI Enhancements:
   - Submit Assessment button (green) when in progress
   - Reopen button (orange) for admins on completed assessments
   - Real-time status badge updates
   - Disabled state styling for form fields
   - Confirmation dialogs for critical actions

7. Translation Updates:
   English:
   - back_to_list, submit_assessment, submit_confirm
   - submitted, read_only, reopen, reopen_confirm

   Spanish:
   - Volver a la Lista, Enviar Evaluación
   - Esta evaluación está completada y no se puede editar
   - Reabrir Evaluación

Benefits:
- ✅ Cleaner, more focused assessment view
- ✅ Prevents accidental edits to completed work
- ✅ Clear status lifecycle with visual feedback
- ✅ Admin controls for speci

--- a/public/static/i18n/es.json
+++ b/public/static/i18n/es.json
@@ -51,7 +51,14 @@
     "deleted": "Evaluación eliminada exitosamente",
     "statistics": "Estadísticas",
     "completion": "Completitud",
-    "average_maturity": "Madurez Promedio"
+    "average_maturity": "Madurez Promedio",
+    "back_to_list": "Volver a la Lista",
+    "submit_assessment": "Enviar Evaluación",
+    "submit_confirm": "¿Estás seguro de que quieres enviar esta evaluación? Una vez enviada, no se podrá editar a menos que un administrador la reabra.",
+    "submitted": "Evaluación enviada exitosamente",
+    "read_only": "Esta evaluación está completada y no se puede editar",
+    "reopen": "Reabrir Evaluación",
+    "reopen_confirm": "¿Estás seguro de que quieres reabrir esta evaluación para editarla?"
   },
   "frameworks": {
     "title": "Marcos de Seguridad y Mapeos",
