--- a/public/static/i18n/en.json
+++ b/public/static/i18n/en.json
@@ -51,7 +51,14 @@
     "deleted": "Assessment deleted successfully",
     "statistics": "Statistics",
     "completion": "Completion",
-    "average_maturity": "Average Maturity"
+    "average_maturity": "Average Maturity",
+    "back_to_list": "Back to List",
+    "submit_assessment": "Submit Assessment",
+    "submit_confirm": "Are you sure you want to submit this assessment? Once submitted, it cannot be edited unless reopened by an administrator.",
+    "submitted": "Assessment submitted successfully",
+    "read_only": "This assessment is completed and cannot be edited",
+    "reopen": "Reopen Assessment",
+    "reopen_confirm": "Are you sure you want to reopen this assessment for editing?"
   },
   "frameworks": {
     "title": "Security Frameworks & Mappings",
