feat: USER APPROVAL SYSTEM - Self-registration with admin approval
COMPLETE IMPLEMENTATION of user self-registration with administrator approval:

✅ Database Layer (Migration 0007):
- Added organization_id column to users table (FOREIGN KEY to organizations)
- Added is_approved column (BOOLEAN, defaults to FALSE for new registrations)
- Migrated existing users (set is_approved = TRUE, organization_id = NULL)
- Applied to production database (6 queries, 22 rows written)

✅ Backend API (auth-routes.ts):
- POST /api/auth/register: Now requires organization_id, sets is_approved = FALSE
- POST /api/auth/login: Validates is_approved flag before allowing login
- POST /api/users/:id/approve: Admin-only endpoint to approve users
- POST /api/users/:id/reject: Admin-only endpoint to delete rejected users
- GET /api/assessments: Filters by user's organization_id (non-admin users)
- GET /api/users: Returns organization_name with user data

✅ Frontend UI (auth-ui.js, app.js):
- Registration form: Added organization selector (loads from /api/organizations)
- Registration flow: Shows success message + redirects to login (no auto-login)
- Login validation: Shows clear error when account not approved
- User Management: Separate sections for 'Pending Approval' and 'Active Users'
- User Management: Approve/Reject buttons for pending users
- User Management: Shows organization_name for all users
- Assessment List: Automatically filtered by user's organization (non-admin)

✅ Translations (en.json, es.json):
- auth.registration_success: "Registration successful! Your account is pending administrator approval."
- auth.account_not_approved: "Your account has not been approved yet. Please contact an administrator."
- users.pending_approval: "Pending Approval" / "Pendientes de Aprobación"
- users.awaiting_approval: "Awaiting Approval" / "Esperando Aprobación"
- users.active_users: "Active Users" / "Usuarios Activos"
- users.registered_on: "Registered on" / "Registrado el"
- users.approve_conf

--- a/public/static/i18n/es.json
+++ b/public/static/i18n/es.json
@@ -19,6 +19,8 @@
     "email": "Correo Electrónico",
     "password": "Contraseña",
     "name": "Nombre Completo",
+    "organization": "Organización",
+    "select_organization": "Selecciona tu organización",
     "login_button": "Iniciar Sesión",
     "register_button": "Crear Cuenta",
     "no_account": "¿No tienes una cuenta?",
@@ -27,7 +29,10 @@
     "login_link": "Inicia sesión aquí",
     "logout_confirm": "¿Estás seguro de que quieres cerrar sesión?",
     "role_admin": "Administrador",
-    "role_user": "Usuario"
+    "role_user": "Usuario",
+    "pending_approval": "Tu cuenta está pendiente de aprobación por un administrador",
+    "account_not_approved": "Tu cuenta aún no ha sido aprobada. Por favor contacta a un administrador.",
+    "registration_success": "¡Registro exitoso! Tu cuenta está pendiente de aprobación por un administrador."
   },
   "assessments": {
     "title": "Evaluaciones de Ciberseguridad",
@@ -99,16 +104,31 @@
     "role_admin": "Administrador",
     "role_user": "Usuario Regular",
     "is_active": "Activo",
+    "is_approved": "Aprobado",
+    "organization": "Organización",
+    "status_pending": "Pendiente de Aprobación",
+    "status_approved": "Aprobado",
+    "status_rejected": "Rechazado",
     "created_at": "Creado",
     "create": "Crear Usuario",
     "cancel": "Cancelar",
     "edit": "Editar",
     "delete": "Eliminar",
-    "delete_confirm": "¿Estás seguro de que quieres eliminar este usuario?",
+    "approve": "Aprobar",
+    "reject": "Rechazar",
+    "pending_approval": "Pendientes de Aprobación",
+    "awaiting_approval": "Esperando Aprobación",
+    "active_users": "Usuarios Activos",
+    "registered_on": "Registrado el",
+    "approve_confirm": "¿Aprobar al usuario \"{0}\"? Podrá iniciar sesión y acceder al sistema.",
+    "reject_confirm": "¿Rechazar al usuario \"{0}\"? Esto eliminará permanentemente su registro.",
+    "delete_confirm": "¿Estás seguro de que quieres eliminar a \"{0}\"?",
     "delete_final": "Escribe DELETE para confirmar:",
     "deleted": "Usuario eliminado exitosamente",
     "created": "Usuario creado exitosamente",
-    "updated": "Usuario actualizado exitosamente"
+    "updated": "Usuario actualizado exitosamente",
+    "approved": "Usuario aprobado exitosamente",
+    "rejected": "Registro de usuario rechazado y eliminado"
   },
   "evaluation": {
     "maturity_level": "Nivel de Madurez",
