--- a/public/static/i18n/en.json
+++ b/public/static/i18n/en.json
@@ -19,6 +19,8 @@
     "email": "Email Address",
     "password": "Password",
     "name": "Full Name",
+    "organization": "Organization",
+    "select_organization": "Select your organization",
     "login_button": "Login",
     "register_button": "Create Account",
     "no_account": "Don't have an account?",
@@ -27,7 +29,10 @@
     "login_link": "Login here",
     "logout_confirm": "Are you sure you want to logout?",
     "role_admin": "Administrator",
-    "role_user": "User"
+    "role_user": "User",
+    "pending_approval": "Your account is pending approval by an administrator",
+    "account_not_approved": "Your account has not been approved yet. Please contact an administrator.",
+    "registration_success": "Registration successful! Your account is pending administrator approval."
   },
   "assessments": {
     "title": "Cybersecurity Assessments",
@@ -99,16 +104,31 @@
     "role_admin": "Administrator",
     "role_user": "Regular User",
     "is_active": "Active",
+    "is_approved": "Approved",
+    "organization": "Organization",
+    "status_pending": "Pending Approval",
+    "status_approved": "Approved",
+    "status_rejected": "Rejected",
     "created_at": "Created",
     "create": "Create User",
     "cancel": "Cancel",
     "edit": "Edit",
     "delete": "Delete",
-    "delete_confirm": "Are you sure you want to delete this user?",
+    "approve": "Approve",
+    "reject": "Reject",
+    "pending_approval": "Pending Approval",
+    "awaiting_approval": "Awaiting Approval",
+    "active_users": "Active Users",
+    "registered_on": "Registered on",
+    "approve_confirm": "Approve user \"{0}\"? They will be able to log in and access the system.",
+    "reject_confirm": "Reject user \"{0}\"? This will permanently delete their registration.",
+    "delete_confirm": "Are you sure you want to delete \"{0}\"?",
     "delete_final": "Type DELETE to confirm:",
     "deleted": "User deleted successfully",
     "created": "User created successfully",
-    "updated": "User updated successfully"
+    "updated": "User updated successfully",
+    "approved": "User approved successfully",
+    "rejected": "User registration rejected and deleted"
   },
   "evaluation": {
     "maturity_level": "Maturity Level",
