feat: REPORTS & ANALYTICS MODULE - PDF export, radar charts, and comparisons
COMPLETE IMPLEMENTATION of comprehensive reports and analytics system:

✅ Reports Menu (New View):
- Added 'Reports' navigation button (between Frameworks and Organizations)
- New reports-view with 3 report types:
  1. Individual Report (PDF Export)
  2. Assessment Comparison (Radar Charts)
  3. Multi-Organization Comparison (Admin Only)

✅ Individual PDF Reports:
- Export single assessment to PDF with jsPDF
- Includes: Assessment details, statistics, responses summary
- Professional formatting with headers, footers, page numbers
- Automatic file naming: [AssessmentName]_Report.pdf
- Shows: Organization, date, assessor, status, completion %, avg maturity
- Paginated responses (up to 20 per page + count of remaining)

✅ Assessment Comparison (Radar Charts):
- Select 2-5 assessments to compare
- Interactive checkbox selection with live counter
- Radar chart powered by Chart.js showing maturity by NIST CSF function
- 6 functions displayed: GV, ID, PR, DE, RS, RC
- Color-coded datasets (blue, purple, green, orange, pink)
- Export comparison to PDF with embedded chart image
- Includes comparison notes and maturity level legend
- Organization-filtered: Users see only their org's assessments

✅ Multi-Organization Comparison (Admin Only):
- Admin-exclusive feature with warning banner
- Compare assessments across different organizations
- Same radar chart functionality with organization labels
- Grouped display by organization for easy selection
- Red-themed UI to distinguish from regular comparison
- Security: Only accessible by admin role

✅ Frontend (reports.js - 31KB):
- loadReports(): Initialize reports view
- showIndividualReportForm(): Display assessment list for PDF export
- generatePDFReport(id): Create PDF with jsPDF
- showComparisonReportForm(): Display assessment selection UI
- toggleComparisonSelection(): Handle checkbox selection (max 5)
- generateComparisonChart(): Create Chart.js rad

--- a/public/static/i18n/en.json
+++ b/public/static/i18n/en.json
@@ -7,6 +7,7 @@
   "nav": {
     "assessments": "Assessments",
     "frameworks": "Frameworks",
+    "reports": "Reports",
     "organizations": "Organizations",
     "users": "Users",
     "login": "Login",
@@ -160,6 +161,29 @@
     "in_progress": "In Progress",
     "completed": "Completed",
     "archived": "Archived"
+  },
+  "reports": {
+    "title": "Reports & Analytics",
+    "individual_title": "Individual Report",
+    "individual_desc": "Export PDF report for a single assessment",
+    "comparison_title": "Compare Assessments",
+    "comparison_desc": "Compare multiple assessments with radar charts",
+    "multi_org_title": "Multi-Organization",
+    "multi_org_desc": "Compare assessments across organizations",
+    "select_assessment": "Select Assessment to Export",
+    "export_pdf": "Export PDF",
+    "no_assessments": "No assessments available for reporting",
+    "select_compare": "Select Assessments to Compare (2-5)",
+    "need_multiple": "You need at least 2 assessments to compare",
+    "need_multiple_org": "You need assessments from at least 2 different organizations",
+    "selected": "Selected",
+    "generate_comparison": "Generate Comparison",
+    "maturity_comparison": "Maturity Level Comparison by NIST CSF Function",
+    "export_comparison": "Export Comparison Report",
+    "select_multi_org": "Select Assessments Across Organizations (2-5)",
+    "admin_only": "Administrator Only Feature",
+    "admin_warning": "This feature allows comparing assessments across different organizations. Regular users can only compare assessments within their own organization.",
+    "multi_org_chart_title": "Multi-Organization Maturity Comparison"
   },
   "common": {
     "loading": "Loading...",
