feat: ENHANCED RESPONSE FIELDS - Control owner, action plan, and detailed fields
COMPLETE IMPLEMENTATION of enhanced response management with control ownership:

✅ Database Migration (0008):
- Added action_plan column to assessment_responses
- Added control_owner_id column (FK to users table)
- Created index on control_owner_id for performance
- Existing columns: notes, evidence, gaps, recommendations (from previous migrations)
- Applied to production database (3 queries, 222 rows read, 49 rows written)

✅ Response Detail Modal (app.js):
- Replaced placeholder showResponseDetail() with full implementation
- Modal with 6 detailed fields + control owner selector:
  1. Control Owner (dropdown) - User selector with name + organization
  2. Notes - General notes about control implementation
  3. Evidence - Documentation/artifacts/proof of implementation
  4. Gaps - Identified gaps or weaknesses
  5. Action Plan - Planned actions to address gaps (NEW)
  6. Recommendations - Recommendations for improvement
- Read-only mode for completed assessments (all fields disabled)
- Color-coded icons for each field (user-shield, sticky-note, file-alt, exclamation-triangle, tasks, lightbulb)
- Sticky header and footer for better UX on long forms
- Auto-scroll max height (70vh) with overflow-y-auto
- Save button creates or updates response with UPSERT logic

✅ Control Owner Feature:
- Dropdown populated from /api/users
- Shows: User Name (Organization Name)
- Filtered: Only approved and active users
- Stored as control_owner_id (FK to users.id)
- Supports NULL (no owner assigned)
- Hint text: "Person responsible for implementing and maintaining this control"

✅ Backend API Updates (src/index.tsx):
POST /api/responses:
- Added action_plan to INSERT statement
- Added control_owner_id to INSERT statement
- Updated ON CONFLICT DO UPDATE to include new fields
- Bindings: action_plan || null, control_owner_id || null

PUT /api/responses/:id:
- Added action_plan to updates array
- Added contr

--- a/public/static/i18n/en.json
+++ b/public/static/i18n/en.json
@@ -134,9 +134,12 @@
   "evaluation": {
     "maturity_level": "Maturity Level",
     "implementation_status": "Implementation Status",
-    "evidence": "Evidence",
+    "control_owner": "Control Owner",
+    "control_owner_hint": "Person responsible for implementing and maintaining this control",
     "notes": "Notes",
+    "evidence": "Evidence",
     "gaps": "Gaps",
+    "action_plan": "Action Plan",
     "recommendations": "Recommendations",
     "save": "Save",
     "cancel": "Cancel",
